--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,7 @@
 		}
 	}
 }
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@500;600;700&family=Inter:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@500;600;700&family=Inter:wght@300;400;500;600&display=swap");
 :root {
 	--primary: #323fd4;
 	--primary-bg: linear-gradient(90deg, #323fd4 0%, #f55b7a 100%);
@@ -314,20 +314,49 @@ header {
 		}
 	}
 }
-
+.pt-120 {
+	padding-top: 120px;
+}
+.pb-120 {
+	padding-bottom: 120px;
+}
+@include breakpoint(max-lg) {
+	.pt-120 {
+		padding-top: 100px;
+	}
+	.pb-120 {
+		padding-bottom: 100px;
+	}
+}
+@include breakpoint(max-md) {
+	.pt-120 {
+		padding-top: 80px;
+	}
+	.pb-120 {
+		padding-bottom: 80px;
+	}
+}
 // Section Header
 .section-header {
 	.subtitle {
 		font-size: calc(0.75rem + 0.9vw);
+		text-transform: capitalize;
+		font-family: var(--body);
 	}
 	.title {
 		font-size: calc(1.75rem + 0.9vw);
+		text-transform: capitalize;
 	}
 	font-size: calc(0.875rem + 0.1vw);
 	font-weight: 500;
 	color: var(--title);
+	margin-bottom: 25px;
+	@include breakpoint(lg) {
+		margin-bottom: 35px;
+	}
 	@include breakpoint(xl) {
 		font-size: 20px;
+		margin-bottom: 80px;
 		.subtitle {
 			font-size: 24px;
 			line-height: 34px;
@@ -341,5 +370,106 @@ header {
 	}
 	&.center-align {
 		max-width: 720px;
+	}
+}
+//Work Process
+.process-section {
+	position: relative;
+}
+.process-item {
+	// margin: 0 auto;
+	text-align: center;
+	font-weight: 700;
+	.content {
+		max-width: 315px;
+		margin: 0 auto;
+	}
+	.sl {
+		width: 86px;
+		height: 86px;
+		background: var(--primary-bg);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 32px;
+		font-weight: 600;
+		font-family: var(--body);
+		color: var(--white);
+		border-radius: 50%;
+		margin: 0 auto 44px;
+	}
+	@include breakpoint(xl) {
+		font-size: 20px;
+	}
+	position: relative;
+	.arrow2 {
+		position: absolute;
+		top: 0px;
+		left: calc(50% + 100px);
+	}
+	.arrow1 {
+		position: absolute;
+		right: calc(50% + 100px);
+		top: 0px;
+	}
+	@include breakpoint(max-xl) {
+		.arrow1,
+		.arrow2 {
+			width: 150px;
+		}
+		.arrow1 {
+			right: calc(50% + 90px);
+		}
+		.arrow2 {
+			left: calc(50% + 90px);
+		}
+	}
+	max-width: calc(100% / 3);
+	@include breakpoint(max-lg) {
+		@include breakpoint(md) {
+			.sl {
+				width: 60px;
+				height: 60px;
+				font-size: 22px;
+				margin-bottom: 30px;
+			}
+			.arrow1,
+			.arrow2 {
+				width: 120px;
+				top: 0px;
+			}
+			.arrow1 {
+				right: calc(50% + 60px);
+			}
+			.arrow2 {
+				left: calc(50% + 60px);
+			}
+		}
+	}
+	@include breakpoint(max-md) {
+		max-width: 100%;
+		width: 100%;
+		.arrow1,
+		.arrow2 {
+			display: none;
+		}
+		.sl {
+			width: 60px;
+			height: 60px;
+			font-size: 22px;
+			margin-bottom: 15px;
+		}
+	}
+}
+.process-item:nth-child(2) {
+	margin-top: 60px;
+	flex-grow: 1;
+	@include breakpoint(max-lg) {
+		@include breakpoint(md) {
+			margin-top: 40px;
+		}
+	}
+	@include breakpoint(max-md) {
+		margin: 30px 0;
 	}
 }
