--- a/src/App.scss
+++ b/src/App.scss
@@ -87,7 +87,10 @@ body {
 /* Header Menu */
 header {
 	padding: 22px 0;
-	position: relative;
+	position: sticky;
+	z-index: 999;
+	top: 0;
+	background: var(--white);
 }
 .header-wrapper {
 	.logo {
@@ -142,8 +145,10 @@ header {
 	padding: 16px 32px;
 	display: inline-block;
 	border-radius: 8px;
+	transition: all ease 0.3s;
 	&:hover {
 		color: var(--white);
+		opacity: 0.9;
 	}
 }
 .select-container {
@@ -471,5 +476,95 @@ header {
 	}
 	@include breakpoint(max-md) {
 		margin: 30px 0;
+	}
+}
+//Feature
+.feature-img {
+	filter: drop-shadow(0px 4px 40px rgba(43, 46, 74, 0.2));
+	max-width: 100%;
+}
+.__feature {
+	display: flex;
+	align-items: center;
+	&-img {
+		width: 48px;
+		img {
+			max-width: 100%;
+		}
+	}
+	&-cont {
+		width: 0;
+		flex-grow: 1;
+		padding-left: 40px;
+		color: #444649;
+		font-weight: 500;
+		font-size: 16px;
+		line-height: 28px;
+		max-width: 371px;
+		text-transform: capitalize;
+		.title {
+			margin-bottom: 16px;
+			color: var(--primary);
+			@include breakpoint(xl) {
+				font-size: 24px;
+			}
+		}
+	}
+	&:not(:last-child) {
+		margin-bottom: 32px;
+	}
+	@include breakpoint(max-xl) {
+		@include breakpoint(lg) {
+			&-cont {
+				padding-left: 30px;
+				.title {
+					margin-bottom: 10px;
+				}
+			}
+		}
+	}
+	@include breakpoint(max-sm) {
+		&-cont {
+			padding-left: 20px;
+			.title {
+				margin-bottom: 10px;
+			}
+			font-size: 16px;
+			line-height: 1.5;
+			font-weight: 400;
+		}
+	}
+}
+.feature-shape {
+	width: 434.84px;
+	height: 434.84px;
+	left: -192.34px;
+	// top: 1738.71px;
+	background: #3d51df;
+	filter: blur(337.5px);
+	-webkit-filter: blur(337.5px);
+	-moz-filter: blur(337.5px);
+	border-radius: 35px;
+	position: absolute;
+	z-index: -1;
+	opacity: 0.7;
+	@include breakpoint(max-md) {
+		opacity: 0.5;
+	}
+}
+.process-shape {
+	background: linear-gradient(90deg, #323fd4 0%, #f55b7a 100%);
+	filter: blur(337.5px);
+	-webkit-filter: blur(337.5px);
+	-moz-filter: blur(337.5px);
+	border-radius: 35px;
+	width: 369px;
+	height: 370px;
+	right: 0;
+	position: absolute;
+	z-index: -1;
+	opacity: 0.7;
+	@include breakpoint(max-md) {
+		opacity: 0.5;
 	}
 }
