--- a/src/App.scss
+++ b/src/App.scss
@@ -592,7 +592,6 @@ header {
 }
 .temp-email-img {
 	max-width: 826px;
-	margin-bottom: -40px;
 	@include breakpoint(max-xxl) {
 		max-width: 720px;
 	}
@@ -602,5 +601,279 @@ header {
 	@include breakpoint(max-sm) {
 		width: 100%;
 		margin-bottom: -10px;
+	}
+}
+.temp-email-imgaes {
+	position: relative;
+	max-width: 550px;
+	margin-left: auto;
+	height: 415px;
+	a {
+		display: block;
+		width: 264px;
+		img {
+			width: 100%;
+			box-shadow: -15.1797px 16.3473px 22.1857px rgba(78, 106, 255, 0.16);
+			border-radius: 22.1857px;
+		}
+		position: absolute;
+		&:nth-child(1) {
+			top: 0;
+			left: 100px;
+		}
+		&:nth-child(2) {
+			top: 167px;
+			left: -120px;
+		}
+		&:nth-child(3) {
+			top: 141px;
+			left: 300px;
+		}
+		&:nth-child(4) {
+			bottom: 0;
+			left: 12px;
+		}
+		&:nth-child(5) {
+			bottom: 22px;
+			left: 385px;
+		}
+		@include breakpoint(max-xxl) {
+			max-width: 240px;
+		}
+		@include breakpoint(max-xl) {
+			&:nth-child(1) {
+				top: 0;
+				left: 120px;
+			}
+			&:nth-child(2) {
+				top: 137px;
+				left: -20px;
+			}
+			&:nth-child(3) {
+				top: 120px;
+				left: 300px;
+			}
+			&:nth-child(4) {
+				bottom: 0;
+				left: 50px;
+			}
+			&:nth-child(5) {
+				bottom: 22px;
+				left: 335px;
+			}
+		}
+		@include breakpoint(max-sm) {
+			max-width: 165px;
+			&:nth-child(1) {
+				top: 0;
+				left: 60px;
+			}
+			&:nth-child(2) {
+				top: 97px;
+				left: 0;
+			}
+			&:nth-child(3) {
+				top: 120px;
+				left: 200px;
+			}
+			&:nth-child(4) {
+				bottom: 70px;
+				left: 50px;
+			}
+			&:nth-child(5) {
+				bottom: 0;
+				left: 180px;
+			}
+		}
+	}
+	@include breakpoint(max-xl) {
+		height: 355px;
+	}
+	@include breakpoint(max-lg) {
+		margin-right: auto;
+	}
+	@include breakpoint(max-sm) {
+		height: 320px;
+		max-width: 351px;
+		margin: 0 auto;
+	}
+}
+/*Banner Section*/
+.banner-section {
+	padding-bottom: 400px;
+	&::before {
+		content: "";
+		background: linear-gradient(104.77deg, #323fd4 3.99%, #f06e88 101.59%);
+		inset: 0;
+		position: absolute;
+		opacity: 0.7;
+	}
+	position: relative;
+	.container {
+		position: relative;
+		z-index: 1;
+	}
+}
+.banner-content {
+	text-align: center;
+	font-size: 20px;
+	line-height: 1.5;
+	font-weight: 500;
+	color: var(--white);
+	.title {
+		color: var(--white);
+		font-size: 48px;
+		text-transform: capitalize;
+		margin-bottom: 12px;
+	}
+	max-width: 750px;
+	margin: 0 auto;
+	.text {
+		max-width: 639px;
+		margin: 0 auto;
+	}
+	padding: 92px 0 70px;
+	@include breakpoint(max-lg) {
+		.title {
+			font-size: 42px;
+			margin-bottom: 15px;
+		}
+	}
+	@include breakpoint(max-md) {
+		.title {
+			font-size: 36px;
+		}
+		font-size: 18px;
+		font-weight: 400;
+	}
+	@include breakpoint(max-sm) {
+		padding: 70px 0;
+		.title {
+			font-size: 28px;
+		}
+		font-size: 16px;
+	}
+}
+.banner-email-wrapper {
+	position: relative;
+	background: var(--white);
+	max-width: 874px;
+	margin: 0 auto;
+	border-radius: 12px;
+	overflow: hidden;
+	padding: 26px 20px;
+	.banner-email-top {
+		max-width: 528px;
+		margin: 0 auto;
+		text-align: center;
+		position: relative;
+		z-index: 1;
+		.subtitle {
+			font-size: 20px;
+			font-weight: 500;
+			text-transform: capitalize;
+			margin-bottom: 24px;
+		}
+		.copy-txt {
+			margin-bottom: 28px;
+		}
+	}
+}
+.copy-txt {
+	position: relative;
+	input {
+		background: var(--primary);
+		color: var(--white);
+		border-radius: 12px;
+		height: 72px;
+		border: none;
+		outline: none;
+		box-shadow: none;
+		width: 100%;
+		font-weight: 500;
+		font-size: 20px;
+		padding: 0 26px;
+		padding-right: 130px;
+	}
+	button {
+		background: var(--secondary);
+		border: none;
+		outline: none;
+		box-shadow: none;
+		position: absolute;
+		top: 8px;
+		right: 8px;
+		height: calc(100% - 16px);
+		border-radius: 10px;
+		padding: 0 24px;
+		color: var(--white);
+		font-weight: 500;
+		font-size: 20px;
+	}
+	@include breakpoint(max-md) {
+		input {
+			font-size: 16px;
+			font-weight: 400;
+			height: 60px;
+		}
+		button {
+			font-size: 16px;
+		}
+	}
+	@include breakpoint(max-sm) {
+		input {
+			font-size: 14px;
+			padding-right: 95px;
+			padding-left: 15px;
+		}
+		button {
+			font-size: 13px;
+			padding: 0 15px;
+		}
+	}
+}
+.mail-shape {
+	top: 50px;
+	// left: 0;
+	position: absolute;
+	right: calc(50% + 155px);
+}
+.banner-btn-wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 12px;
+}
+.outline-btn {
+	border: 1px solid var(--blue);
+	color: var(--blue);
+	border-radius: 12px;
+	padding: 12px 24px;
+	// background: #fff;
+	font-size: 16px;
+	font-weight: 600;
+	svg {
+		margin-right: 5px;
+	}
+	@include breakpoint(max-md) {
+		padding: 8px 12px;
+		border-radius: 7px;
+		font-size: 14px;
+	}
+}
+.count-message {
+	img {
+		margin-right: 10px;
+	}
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 24px;
+	color: var(--primary);
+	span {
+		max-width: calc(100% - 50px);
+	}
+	margin-top: 45px;
+	@include breakpoint(max-sm) {
+		margin-top: 25px;
 	}
 }
