--- a/src/App.scss
+++ b/src/App.scss
@@ -919,6 +919,7 @@ header {
 		position: absolute;
 		bottom: 0;
 		left: calc(50% + 10px);
+		max-width: 550px;
 	}
 	@include breakpoint(max-xl) {
 		.content {
