--- a/src/App.scss
+++ b/src/App.scss
@@ -1448,3 +1448,73 @@ header {
 		}
 	}
 }
+.__still-faq {
+	background: #f9fafb;
+	border-radius: 16px;
+	padding: 32px;
+	img {
+		width: 120px;
+	}
+	h5 {
+		text-transform: capitalize;
+		margin-top: 32px;
+		margin-bottom: 8px;
+		font-weight: 700;
+		font-size: 20px;
+		color: #18191a;
+	}
+
+	font-weight: 500;
+	font-size: 18px;
+	line-height: 30px;
+	color: #303133;
+	@include breakpoint(max-sm) {
+		padding-left: 16px;
+		padding-right: 16px;
+	}
+	.btn--base {
+		margin-top: 32px;
+	}
+}
+.btn--base {
+	position: relative;
+	padding: 16px 32px;
+	display: inline-block;
+	&::before,
+	&::after {
+		content: "";
+		inset: 0;
+		transition: all ease 0.4s;
+		position: absolute;
+		border-radius: 12px;
+	}
+	&::after {
+		background: linear-gradient(90deg, #323fd4 0%, #f55b7a 100%);
+	}
+	&::before {
+		background: linear-gradient(-90deg, #323fd4 0%, #f55b7a 100%);
+		opacity: 0;
+	}
+	&:hover {
+		&::before {
+			opacity: 1;
+		}
+		&::after {
+			opacity: 0;
+		}
+	}
+	* {
+		position: relative;
+		z-index: 1;
+		color: #fff;
+		font-weight: 700;
+		font-size: 16px;
+		line-height: 28px;
+	}
+	@include breakpoint(max-sm) {
+		padding: 12px 32px;
+		span {
+			font-weight: 600;
+		}
+	}
+}
