--- a/src/App.scss
+++ b/src/App.scss
@@ -2130,7 +2130,8 @@ label {
 		// opacity: 0.78;
 	}
 	position: relative;
-	.container {
+	.container,
+	.container-fluid {
 		position: relative;
 		z-index: 1;
 	}
@@ -2139,6 +2140,29 @@ label {
 		display: flex;
 		align-items: center;
 		justify-content: center;
+	}
+	.container-fluid {
+		.page-header-content {
+			max-width: 1180px;
+			.subtitle {
+				color: var(--white);
+				font-weight: 600;
+				font-size: 32px;
+				line-height: 44px;
+				text-transform: capitalize;
+				@include breakpoint(max-xl) {
+					font-size: 28px;
+					line-height: 1.4;
+				}
+				@include breakpoint(max-lg) {
+					font-size: 24px;
+				}
+				@include breakpoint(max-md) {
+					font-size: 22px;
+					font-weight: 50;
+				}
+			}
+		}
 	}
 }
 
