--- a/src/App.scss
+++ b/src/App.scss
@@ -698,8 +698,43 @@ header {
 	}
 	@include breakpoint(max-sm) {
 		height: 320px;
-		max-width: 351px;
+		max-width: 320px;
 		margin: 0 auto;
+	}
+	@media (max-width: 450px) {
+		transform: translateX(-30px);
+	}
+	@media (max-width: 415px) {
+		transform: translateX(-20px);
+	}
+	@media (max-width: 390px) {
+		transform: translateX(0);
+		height: 300px;
+		max-width: 283px;
+		a {
+			max-width: 135px;
+			&:nth-child(1) {
+				top: 0;
+				left: 60px;
+			}
+			&:nth-child(2) {
+				top: 75px;
+				left: 0;
+			}
+			&:nth-child(3) {
+				top: 120px;
+				left: 150px;
+			}
+			&:nth-child(4) {
+				top: 180px;
+				bottom: unset;
+				left: 20px;
+			}
+			&:nth-child(5) {
+				bottom: 0;
+				left: 130px;
+			}
+		}
 	}
 }
 /*Banner Section*/
