--- a/src/App.scss
+++ b/src/App.scss
@@ -1087,29 +1087,48 @@ header {
 				}
 			}
 		}
+		.table-hidden-content .content {
+			font-size: 12px;
+		}
 	}
 	@include breakpoint(max-sm) {
-		min-width: 575px;
+		// min-width: 575px;
+		width: 100%;
 		thead {
 			th {
-				padding: 15px 0;
-				font-size: 18px;
+				padding: 8px 0;
+				font-size: 14px;
 				font-weight: 600;
 			}
 		}
 		tbody {
 			td {
-				padding: 12px;
+				padding: 12px 5px;
 			}
 			.user {
+				img {
+					width: 24px;
+					height: 24px;
+				}
 				h6 {
 					font-weight: 500;
 					font-size: 12px;
+					display: none;
 				}
 			}
 			.mail-data {
 				.subtitle {
+					font-size: 11px;
 					margin-bottom: 0;
+				}
+			}
+			.close-right-data {
+				.not-hover-content {
+					font-size: 10px;
+				}
+				.circle-shape {
+					width: 8px;
+					height: 8px;
 				}
 			}
 		}
@@ -1131,6 +1150,11 @@ header {
 		background: var(--primary);
 		color: var(--white);
 	}
+	@include breakpoint(max-sm) {
+		padding: 4px 12px;
+		font-size: 14px;
+		font-weight: 400;
+	}
 }
 .__not-outline-btn {
 	padding: 9px 17px;
@@ -1142,11 +1166,16 @@ header {
 	border-radius: 6px;
 	outline: none;
 	transition: all ease 0.3s;
-	border: 1px solid;
+	border: 1px solid var(--primary);
 	&:hover {
 		background: transparent;
 		border-color: var(--primary);
 		color: var(--primary);
+	}
+	@include breakpoint(max-sm) {
+		padding: 5px 12px;
+		font-size: 14px;
+		font-weight: 400;
 	}
 }
 .mail-btn-container {
@@ -1197,6 +1226,9 @@ label {
 	display: flex;
 	align-items: center;
 	gap: 24px;
+	@include breakpoint(max-sm) {
+		gap: 10px;
+	}
 }
 .click-btn {
 	position: absolute;
