--- a/src/App.scss
+++ b/src/App.scss
@@ -2845,3 +2845,11 @@ textarea.form-control {
 		padding-bottom: 470px;
 	}
 }
+[data-aos] {
+	transition-duration: 0.6s !important;
+	-webkit-transition-duration: 0.6s !important;
+	-moz-transition-duration: 0.6s !important;
+	transition-delay: 0.1s !important;
+	-webkit-transition-delay: 0.1s !important;
+	-moz-transition-delay: 0.1s !important;
+}
