--- a/src/App.scss
+++ b/src/App.scss
@@ -607,6 +607,178 @@ header {
 		margin-bottom: -10px;
 	}
 }
+@-webkit-keyframes pulse {
+	0% {
+		-webkit-transform: scaleX(1);
+		transform: scaleX(1);
+	}
+	50% {
+		-webkit-transform: scale3d(1.05, 1.05, 1.05);
+		transform: scale3d(1.05, 1.05, 1.05);
+	}
+	to {
+		-webkit-transform: scaleX(1);
+		transform: scaleX(1);
+	}
+}
+@keyframes pulse {
+	0% {
+		-webkit-transform: scaleX(1);
+		transform: scaleX(1);
+	}
+	50% {
+		-webkit-transform: scale3d(1.05, 1.05, 1.05);
+		transform: scale3d(1.05, 1.05, 1.05);
+	}
+	to {
+		-webkit-transform: scaleX(1);
+		transform: scaleX(1);
+	}
+}
+@-webkit-keyframes tada {
+	0% {
+		-webkit-transform: scaleX(1);
+		transform: scaleX(1);
+	}
+	10%,
+	20% {
+		-webkit-transform: scale3d(0.9, 0.9, 0.9) rotate(-3deg);
+		transform: scale3d(0.9, 0.9, 0.9) rotate(-3deg);
+	}
+	30%,
+	50%,
+	70%,
+	90% {
+		-webkit-transform: scale3d(1.1, 1.1, 1.1) rotate(3deg);
+		transform: scale3d(1.1, 1.1, 1.1) rotate(3deg);
+	}
+	40%,
+	60%,
+	80% {
+		-webkit-transform: scale3d(1.1, 1.1, 1.1) rotate(-3deg);
+		transform: scale3d(1.1, 1.1, 1.1) rotate(-3deg);
+	}
+	to {
+		-webkit-transform: scaleX(1);
+		transform: scaleX(1);
+	}
+}
+@keyframes tada {
+	0% {
+		-webkit-transform: scaleX(1);
+		transform: scaleX(1);
+	}
+	10%,
+	20% {
+		-webkit-transform: scale3d(0.9, 0.9, 0.9) rotate(-3deg);
+		transform: scale3d(0.9, 0.9, 0.9) rotate(-3deg);
+	}
+	30%,
+	50%,
+	70%,
+	90% {
+		-webkit-transform: scale3d(1.1, 1.1, 1.1) rotate(3deg);
+		transform: scale3d(1.1, 1.1, 1.1) rotate(3deg);
+	}
+	40%,
+	60%,
+	80% {
+		-webkit-transform: scale3d(1.1, 1.1, 1.1) rotate(-3deg);
+		transform: scale3d(1.1, 1.1, 1.1) rotate(-3deg);
+	}
+	to {
+		-webkit-transform: scaleX(1);
+		transform: scaleX(1);
+	}
+}
+@-webkit-keyframes heartBeat {
+	0% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+	14% {
+		-webkit-transform: scale(1.1);
+		transform: scale(1.1);
+	}
+	28% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+	42% {
+		-webkit-transform: scale(1.1);
+		transform: scale(1.1);
+	}
+	70% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+}
+@keyframes heartBeat {
+	0% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+	14% {
+		-webkit-transform: scale(1.1);
+		transform: scale(1.1);
+	}
+	28% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+	42% {
+		-webkit-transform: scale(1.1);
+		transform: scale(1.1);
+	}
+	70% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+}
+@-webkit-keyframes shakeX {
+	0%,
+	to {
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+	}
+	10%,
+	30%,
+	50%,
+	70%,
+	90% {
+		-webkit-transform: translate3d(-10px, 0, 0);
+		transform: translate3d(-10px, 0, 0);
+	}
+	20%,
+	40%,
+	60%,
+	80% {
+		-webkit-transform: translate3d(10px, 0, 0);
+		transform: translate3d(10px, 0, 0);
+	}
+}
+@keyframes shakeX {
+	0%,
+	to {
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+	}
+	10%,
+	30%,
+	50%,
+	70%,
+	90% {
+		-webkit-transform: translate3d(-10px, 0, 0);
+		transform: translate3d(-10px, 0, 0);
+	}
+	20%,
+	40%,
+	60%,
+	80% {
+		-webkit-transform: translate3d(10px, 0, 0);
+		transform: translate3d(10px, 0, 0);
+	}
+}
 .temp-email-imgaes {
 	position: relative;
 	max-width: 550px;
@@ -624,22 +796,27 @@ header {
 		&:nth-child(1) {
 			top: 0;
 			left: 100px;
+			animation: pulse 3s alternate infinite;
 		}
 		&:nth-child(2) {
 			top: 167px;
 			left: -120px;
+			animation: heartBeat 6s linear infinite;
 		}
 		&:nth-child(3) {
 			top: 141px;
 			left: 300px;
+			animation: shakeX 6s linear infinite;
 		}
 		&:nth-child(4) {
 			bottom: 0;
+			animation: tada 6s linear infinite;
 			left: 12px;
 		}
 		&:nth-child(5) {
 			bottom: 22px;
 			left: 385px;
+			animation: pulse 3s alternate-reverse infinite;
 		}
 		@include breakpoint(max-xxl) {
 			max-width: 240px;
