--- a/src/App.scss
+++ b/src/App.scss
@@ -3035,3 +3035,26 @@ textarea.form-control {
 	width: 100%;
 	height: 100%;
 }
+.__still-faq-img {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	img {
+		width: 56px;
+		aspect-ratio: 1;
+		border-radius: 50%;
+		object-fit: cover;
+		outline: 2px solid #fff;
+		&:nth-child(2) {
+			position: relative;
+		}
+		&:nth-child(1) {
+			margin-right: -20px;
+			width: 48px;
+		}
+		&:nth-child(3) {
+			margin-left: -20px;
+			width: 48px;
+		}
+	}
+}
